--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<header>
+  <nav>
+    <a href="index.html">Home</a> |
+    <a href="about.html">About</a> |
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
 <!DOCTYPE html>
 <html lang="en">
 <head>
